--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login Netflix</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="bg"></div>
+    <div class="box-login">
+        <h1 class="title">Sing in</h1>
+        <input type="email" class="input" placeholder="Email or phone number">
+        <br>
+        <input type="password" class="input" placeholder="password">
+        <br>
+        <button class="btn"> Sign in </button>
+        <br>
+        <input type="checkbox" id="checkbox">
+        <label for="checkbox" class="remember">Remember me</label>
+        <div class="new">
+            New to Netflix?
+            <a href="">Sign up Now.</a>
+        </div>
+    </div>
+
 </body>
+
 </html>
